objects/vlocity_cmt__FlowStepFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__ApplicationType__c</fullName>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldType__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FlowStep__c</fullName>
        <label>Flow Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InOut__c</fullName>
        <label>In/Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONFieldName__c</fullName>
        <label>JSON Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONObjectName__c</fullName>
        <label>JSON Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Flow Setting</label>
</CustomObject>